Correción de Navbar

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -40,19 +40,19 @@
           <a class="nav-link" href="../pages/crafting.html">Craft's</a>
         </li>
         <li class="nav-item">
-          <img src="../assets/icons/Tinta.png" alt="Aplicación de Tinta"> 
+          <img src="../assets/icons/Tinta.png" alt="Aplicación de Tinta">
           <a class="nav-link" href="../pages/sublimation.html">Sublimación</a>
         </li>
         <li class="nav-item">
-          <img src="../assets/icons/Vinil.png" alt="Vinilos de Corte & Textiles"> 
+          <img src="../assets/icons/Vinil.png" alt="Vinilos de Corte & Textiles">
           <a class="nav-link" href="../pages/vinyl.html">Vinilos</a>
         </li>
         <li class="nav-item">
-          <img src="../assets/icons/Location.png" alt="Ubicación"> 
+          <img src="../assets/icons/Location.png" alt="Ubicación">
           <a class="nav-link" href="../pages/delivery_points.html">Puntos de Entrega</a>
         </li>
         <li class="nav-item">
-          <img src="../assets/icons/Contacto.png" alt="Información de Contacto"> 
+          <img src="../assets/icons/Contacto.png" alt="Información de Contacto">
           <a class="nav-link" href="../pages/contact.html">Contacto</a>
         </li>
       </ul>
@@ -120,10 +120,11 @@
             </div>
             <div class="inputField d-flex flex-column align-items-start mb-4">
               <label for="descripMensaje" class="input-label">Descrpción del Mensaje</label>
-              <textarea rows="4" cols="50" class="custom-textarea" placeholder="Tu momento ha llegado. ¿Qué quieres decirnos"></textarea>
-            </div>
-            <div class="row justify-content-center"><button class="btn btn-primary formBtn"
-                id="contactBtn">¡Envíame!</button>
+              <textarea rows="4" cols="50" class="custom-textarea"
+                placeholder="Tu momento ha llegado. ¿Qué quieres decirnos"></textarea>
+              <div class="row justify-content-center"><button class="btn btn-primary formBtn"
+                  id="contactBtn">¡Envíame!</button>
+              </div>
             </div>
           </div>
         </div>
