Correciónes Proyecto Final 3

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -122,7 +122,7 @@
               <label for="descripMensaje" class="input-label">Descrpción del Mensaje</label>
               <textarea rows="4" cols="50" class="custom-textarea"
                 placeholder="Tu momento ha llegado. ¿Qué quieres decirnos"></textarea>
-              <div class="row justify-content-center"><button class="btn btn-primary formBtn"
+              <div class="row justify-content-center container-fluid"><button class="btn btn-primary formBtn"
                   id="contactBtn">¡Envíame!</button>
               </div>
             </div>
