Revisión para Proyecto Final

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,12 +10,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description"
-    content="CraftMania ofrece personalización única para tus celebraciones. Descubre nuestro catálogo y haz que tu próximo evento sea excepcional.">
+    content="Contacta a CraftMania para obtener información sobre nuestros servicios de personalización de celebraciones. Déjanos tus comentarios y sugerencias.">
   <meta name="keywords" content="CraftMania, celebraciones personalizadas, eventos, catálogo">
 
   <title>CraftMania - Personalización de Celebraciones Únicas</title>
 </head>
-
 <body>
   <header class="container-fluid d-none d-lg-flex justify-content-center align-items-center" id="promotionTag">
     <img src="../assets/icons/Delivery.png" alt="">
@@ -48,8 +47,8 @@
           <a class="nav-link" href="../pages/vinyl.html">Vinilos</a>
         </li>
         <li class="nav-item">
-          <img src="../assets/icons/Location.png" alt="Ubicación">
-          <a class="nav-link" href="../pages/delivery_points.html">Puntos de Entrega</a>
+          <img src="../assets/icons/Location.png" alt="Ubicación"> 
+          <a class="nav-link" href="../pages/orderprocess.html">Proceso para Pedidos</a>
         </li>
         <li class="nav-item">
           <img src="../assets/icons/Contacto.png" alt="Información de Contacto">
@@ -64,8 +63,7 @@
   <main>
     <section class="container-fluid d-flex justify-content-center align-items-center" id="contactHeader">
       <div class="row p-5 justify-content-around align-items-center">
-        <div class="col-lg-5 col-md-12">
-          <!-- Primer elemento -->
+        <div class="col-lg-5 d-md-none d-lg-block">
           <div class="row mb-3 align-items-center">
             <div class="col-2">
               <img src="../assets/icons/Calendario.png" alt="Icono de Calendario" class="img-fluid">
@@ -76,8 +74,6 @@
                 anteriormente. ¡Gracias por elegirnos!</p>
             </div>
           </div>
-
-          <!-- Segundo elemento -->
           <div class="row mb-3 align-items-center">
             <div class="col-2">
               <img src="../assets/icons/ShieldIcon.png" alt="Icono de Calendario" class="img-fluid">
@@ -88,8 +84,6 @@
                 darte la mejor atención posible.</p>
             </div>
           </div>
-
-          <!-- Tercer elemento -->
           <div class="row mb-3 align-items-center">
             <div class="col-2">
               <img src="../assets/icons/LockIcon.png" alt="Icono de Calendario" class="img-fluid">
@@ -100,7 +94,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-5 d-none d-lg-flex align-items-center">
+        <div class="col-lg-5 d-md-flex d-lg-flex align-items-center">
           <div class="formBox align-items-center">
             <h1 class="text-light text-uppercase">Contáctanos</h1>
             <p>Estamos interesados en escucharte. Déjanos tus comentarios, sugerencias o solicita información por medio
@@ -136,33 +130,33 @@
     <div class="main-footer">
       <div class="container-fluid d-flex flex-column" id="footerBody">
         <div class="row px-5 d-flex justify-content-around mt-5">
-          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+          <div class="sectionContainer col-lg-2 col-md-6 text-light d-flex flex-column justify-content-start">
             <div class="sectionTitle">Redes Sociales</div>
             <div class="sectionItem"> <a
                 href="https://instagram.com/craftmania.pty?igshid=MzRlODBiNWFlZA==">Instagram</a> </div>
             <div class="sectionItem"><a href="https://www.facebook.com/profile.php?id=61551363476187">Facebook</a></div>
             <div class="sectionItem"><a href="https://www.tiktok.com/@mgcraft.pty?_t=8fmU2t6IpW9&_r=1">TikTok</a></div>
           </div>
-          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+          <div class="sectionContainer col-lg-2 d-none d-lg-flex text-light d-flex flex-column justify-content-start">
             <div class="sectionTitle">Políticas</div>
             <div class="sectionItem">Privacidad</div>
             <div class="sectionItem">Confidencialidad a Usuario</div>
             <div class="sectionItem">Recursos</div>
           </div>
-          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+          <div class="sectionContainer col-lg-2 col-md-6 text-light d-flex flex-column justify-content-start">
             <div class="sectionTitle">Colaboradores</div>
             <div class="sectionItem">Emily Moran</div>
             <div class="sectionItem">Esteban Samaniego</div>
           </div>
-          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+          <div class="sectionContainer col-lg-2 d-none d-lg-flex text-light d-flex flex-column justify-content-start">
             <div class="sectionTitle">Centro de Ayuda</div>
             <div class="sectionItem">Devoluciones & Reclamos</div>
             <div class="sectionItem">Preguntas Frecuentes</div>
             <div class="sectionItem">Politicas de Envio</div>
           </div>
         </div>
-        <div class="border-top container-fluid my-4" id="footerDivider"></div>
-        <div class="copyrigth"><span>Todas las imágenes, textos, gráficos y otros elementos de este sitio web están
+        <div class="border-top container-fluid my-4 d-none d-lg-flex" id="footerDivider"></div>
+        <div class="copyrigth d-none d-lg-flex"><span>Todas las imágenes, textos, gráficos y otros elementos de este sitio web están
             protegidos por las leyes de derechos de autor y otras leyes de propiedad intelectual. Queda estrictamente
             prohibida la reproducción, distribución, o modificación de cualquier parte de este sitio web sin el permiso
             previo por escrito de CraftMania Panamá.</span></div>
