--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <img src="./assets/icons/Inicio.png" alt="Papelería Creativa">
-          <a class="nav-link" href="../index.html">Inicio</a>
+          <a class="nav-link" href="./index.html">Inicio</a>
         </li>
         <li class="nav-item">
           <img src="./assets/icons/Papel.png" alt="Papelería Creativa">
@@ -49,7 +49,7 @@
         </li>
         <li class="nav-item">
           <img src="./assets/icons/Location.png" alt="Ubicación"> 
-          <a class="nav-link" href="./pages/delivery_points.html">Puntos de Entrega</a>
+          <a class="nav-link" href="./pages/orderprocess.html">Proceso para Pedidos</a>
         </li>
         <li class="nav-item">
           <img src="./assets/icons/Contacto.png" alt="Información de Contacto"> 
@@ -155,33 +155,33 @@
     <div class="main-footer">
       <div class="container-fluid d-flex flex-column" id="footerBody">
         <div class="row px-5 d-flex justify-content-around mt-5">
-          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+          <div class="sectionContainer col-lg-2 col-md-6 text-light d-flex flex-column justify-content-start">
             <div class="sectionTitle">Redes Sociales</div>
-            <div class="sectionItem"> <a
+            <div class="sectionItem"><a
                 href="https://instagram.com/craftmania.pty?igshid=MzRlODBiNWFlZA==">Instagram</a> </div>
             <div class="sectionItem"><a href="https://www.facebook.com/profile.php?id=61551363476187">Facebook</a></div>
             <div class="sectionItem"><a href="https://www.tiktok.com/@mgcraft.pty?_t=8fmU2t6IpW9&_r=1">TikTok</a></div>
           </div>
-          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+          <div class="sectionContainer col-lg-2 d-none d-lg-flex text-light d-flex flex-column justify-content-start">
             <div class="sectionTitle">Políticas</div>
             <div class="sectionItem">Privacidad</div>
             <div class="sectionItem">Confidencialidad a Usuario</div>
             <div class="sectionItem">Recursos</div>
           </div>
-          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+          <div class="sectionContainer col-lg-2 col-md-6 text-light d-flex flex-column justify-content-start">
             <div class="sectionTitle">Colaboradores</div>
             <div class="sectionItem">Emily Moran</div>
             <div class="sectionItem">Esteban Samaniego</div>
           </div>
-          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+          <div class="sectionContainer col-lg-2 d-none d-lg-flex text-light d-flex flex-column justify-content-start">
             <div class="sectionTitle">Centro de Ayuda</div>
             <div class="sectionItem">Devoluciones & Reclamos</div>
             <div class="sectionItem">Preguntas Frecuentes</div>
             <div class="sectionItem">Politicas de Envio</div>
           </div>
         </div>
-        <div class="border-top container-fluid my-4" id="footerDivider"></div>
-        <div class="copyrigth"><span>Todas las imágenes, textos, gráficos y otros elementos de este sitio web están
+        <div class="border-top container-fluid my-4 d-none d-lg-flex" id="footerDivider"></div>
+        <div class="copyrigth d-none d-lg-flex"><span>Todas las imágenes, textos, gráficos y otros elementos de este sitio web están
             protegidos por las leyes de derechos de autor y otras leyes de propiedad intelectual. Queda estrictamente
             prohibida la reproducción, distribución, o modificación de cualquier parte de este sitio web sin el permiso
             previo por escrito de CraftMania Panamá.</span></div>
