--- a/pages/sublimation.html
+++ b/pages/sublimation.html
@@ -1,158 +1,123 @@
-<!DOCTYPE html>
 <html lang="es">
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../css/bootstrap.min.css" />
-  <link rel="stylesheet" href="../primaryStyles.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../estilos.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans">
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Nosotros - Craftmania Panamá</title>
+  <meta name="description"
+    content="CraftMania ofrece personalización única para tus celebraciones. Descubre nuestro catálogo y haz que tu próximo evento sea excepcional.">
+  <meta name="keywords" content="CraftMania, celebraciones personalizadas, eventos, catálogo">
+
+  <title>CraftMania - Sublimación de Prendas Textiles & Otros</title>
 </head>
 
 <body>
-  <!-- Encabezado -->
-  <header>
-    <nav class="navbar navbar-expand-lg bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../Inicio.html"><img src="../assets/Craft-Mania-Logo.png" alt="Logo de CraftMania"
-            height="35"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" href="../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="nosotros.html">Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="catalogo.html">Catalogo</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="noticias.html">Novedades</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contacto.html">Contactanos</a>
-            </li>
-          </ul>
+  <header class="container-fluid d-none d-lg-flex justify-content-center align-items-center" id="promotionTag">
+    <img src="../assets/icons/Delivery.png" alt="">
+    <span class="font-weight-light mb-0">Envío gratuito a partir de $40. Tiempo de entrega en 48 horas</span>
+  </header>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand d-lg-none" href="../index.html">
+      <img src="../assets/Craft-Mania-Logo.png" alt="Logo de tu empresa" height="50" class="p-2">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <img src="../assets/icons/Inicio.png" alt="Papelería Creativa">
+          <a class="nav-link" href="../index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <img src="../assets/icons/Papel.png" alt="Papelería Creativa">
+          <a class="nav-link" href="../pages/crafting.html">Craft's</a>
+        </li>
+        <li class="nav-item">
+          <img src="../assets/icons/Tinta.png" alt="Aplicación de Tinta">
+          <a class="nav-link" href="../pages/sublimation.html">Sublimación</a>
+        </li>
+        <li class="nav-item">
+          <img src="../assets/icons/Vinil.png" alt="Vinilos de Corte & Textiles">
+          <a class="nav-link" href="../pages/vinyl.html">Vinilos</a>
+        </li>
+        <li class="nav-item">
+          <img src="../assets/icons/Location.png" alt="Ubicación">
+          <a class="nav-link" href="../pages/orderprocess.html">Proceso para Pedidos</a>
+        </li>
+        <li class="nav-item">
+          <img src="../assets/icons/Contacto.png" alt="Información de Contacto">
+          <a class="nav-link" href="../pages/contact.html">Contacto</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <main>
+    <section class="container-fluid d-flex justify-content-center align-items-center">
+      <div class="row p-5 justify-content-around">
+        <div class="col-lg-5 col-md-12">
+          <img src="../assets/sublimationMainImage.png" alt="Sublimación de Prendas Textiles" class="w-75">
+        </div>
+        <div class="col-lg-5 d-none d-lg-flex flex-column align-items-center" id="craftHeader">
+          <h1 class="mb-4">Sublimación de Prendas Textiles & Otros</h1>
+          <p><strong>¿En qué consiste la sublimación?</strong><br><br>
+            La sublimación de prendas puede varias demasiado. Puede ir desde un mousepad, hasta una prenda textil como
+            un sueter casual o deportivo, así tambien como tazas, platos y demás. La tematica como siempre queda a
+            elección de nuestros clientes y tratamos de plasmar toda su idea con la mayor precisión posible.</p>
         </div>
       </div>
-    </nav>
-  </header>
-
-  <!-- Contenido de la página "Nosotros" -->
-  <main class="nosotros-container">
-    <section class="about-us">
-      <h1>Sobre Nosotros</h1>
-      <p>
-        Bienvenidos a Craftmania Panamá, una empresa dedicada a proporcionar productos artesanales de alta
-        calidad para todos los amantes de las manualidades y el arte. Fundada en 2010, nos hemos esforzado por
-        ofrecer la mejor selección de materiales creativos y herramientas, así como inspiración y asesoramiento
-        para que puedas llevar tus proyectos al siguiente nivel.
-      </p>
-      <p>
-        En Craftmania, creemos en la importancia de la creatividad y la expresión personal. Nuestro equipo está
-        formado por apasionados artesanos y artistas que comparten el mismo entusiasmo por el arte y la
-        artesanía que tú. Nos esforzamos por ser una fuente de inspiración y un recurso confiable para la
-        comunidad creativa.
-      </p>
-    </section>
-
-    <section class="mission-vision">
-      <h2>Nuestra Misión y Visión</h2>
-      <p>
-        Nuestra misión es fomentar la creatividad y el arte a través de la provisión de materiales artesanales
-        de primera calidad, herramientas innovadoras y recursos educativos. Queremos inspirar a las personas a
-        explorar su potencial creativo y a descubrir la alegría de crear con sus propias manos.
-      </p>
-      <p>
-        Nuestra visión es convertirnos en el principal destino para los amantes del arte y las manualidades en
-        Panamá, proporcionando una amplia gama de productos y servicios que satisfagan las necesidades y
-        expectativas de nuestra comunidad creativa.
-      </p>
-    </section>
-
-    <section class="team">
-      <h2>Nuestro Equipo</h2>
-      <p>
-        En Craftmania, nuestro equipo está compuesto por expertos en arte y manualidades que comparten una
-        pasión por la creatividad y la innovación. Cada miembro de nuestro equipo aporta habilidades únicas y
-        conocimientos especializados para brindar el mejor servicio y asesoramiento a nuestros clientes.
-      </p>
-      <p>
-        Juntos, trabajamos para garantizar que cada experiencia con Craftmania sea excepcional y que nuestros
-        clientes se sientan inspirados y apoyados en cada paso de su viaje creativo.
-      </p>
     </section>
   </main>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <footer>
-      <div class="container-fluid d-flex flex-column justify-content-center">
-        <div class="row d-none d-lg-flex">
-          <div class="col-3">
-            <div class="footer-section">
-              <h4>Catálogo</h4>
-              <ul>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Ofertas</a></li>
-                <li><a href="#">Novedades</a></li>
-                <!-- Añadir más opciones aquí -->
-              </ul>
-            </div>
+  <footer class="container-fluid">
+    <div class="main-footer">
+      <div class="container-fluid d-flex flex-column" id="footerBody">
+        <div class="row px-5 d-flex justify-content-around mt-5">
+          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+            <div class="sectionTitle">Redes Sociales</div>
+            <div class="sectionItem"> <a
+                href="https://instagram.com/craftmania.pty?igshid=MzRlODBiNWFlZA==">Instagram</a> </div>
+            <div class="sectionItem"><a href="https://www.facebook.com/profile.php?id=61551363476187">Facebook</a></div>
+            <div class="sectionItem"><a href="https://www.tiktok.com/@mgcraft.pty?_t=8fmU2t6IpW9&_r=1">TikTok</a></div>
           </div>
-          <div class="col-3">
-            <div class="footer-section">
-              <h4>Servicios</h4>
-              <ul>
-                <li><a href="#">Envíos</a></li>
-                <li><a href="#">Personalización</a></li>
-                <li><a href="#">Asesoramiento</a></li>
-                <!-- Añadir más opciones aquí -->
-              </ul>
-            </div>
+          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+            <div class="sectionTitle">Políticas</div>
+            <div class="sectionItem">Privacidad</div>
+            <div class="sectionItem">Confidencialidad a Usuario</div>
+            <div class="sectionItem">Recursos</div>
           </div>
-          <div class="col-3">
-            <div class="footer-section">
-              <h4>Freebies</h4>
-              <ul>
-                <li><a href="#">Descargas gratuitas</a></li>
-                <li><a href="#">Muestras gratuitas</a></li>
-                <li><a href="#">Promociones</a></li>
-                <!-- Añadir más opciones aquí -->
-              </ul>
-            </div>
+          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+            <div class="sectionTitle">Colaboradores</div>
+            <div class="sectionItem">Emily Moran</div>
+            <div class="sectionItem">Esteban Samaniego</div>
           </div>
-          <div class="col-3">
-            <div class="footer-section">
-              <h4>Nosotros</h4>
-              <ul>
-                <li><a href="#">Misión y visión</a></li>
-                <li><a href="#">Equipo</a></li>
-                <li><a href="#">Testimonios</a></li>
-                <!-- Añadir más opciones aquí -->
-              </ul>
-            </div>
+          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+            <div class="sectionTitle">Centro de Ayuda</div>
+            <div class="sectionItem">Devoluciones & Reclamos</div>
+            <div class="sectionItem">Preguntas Frecuentes</div>
+            <div class="sectionItem">Politicas de Envio</div>
           </div>
         </div>
-        <div class="row">
-          <div class="col">
-            <div class="footer-bottom">
-              <p>Todos los derechos reservados &copy; Craftmania Panamá, 2023</p>
-              <div class="footer-legal">
-                <a href="#">Políticas de privacidad</a>
-                <a href="#">Términos y condiciones</a>
-              </div>
-            </div>
-          </div>
-        </div>
-    </footer>
-
+        <div class="border-top container-fluid my-4" id="footerDivider"></div>
+        <div class="copyrigth"><span>Todas las imágenes, textos, gráficos y otros elementos de este sitio web están
+            protegidos por las leyes de derechos de autor y otras leyes de propiedad intelectual. Queda estrictamente
+            prohibida la reproducción, distribución, o modificación de cualquier parte de este sitio web sin el permiso
+            previo por escrito de CraftMania Panamá.</span></div>
+      </div>
+      <img src="../assets/Craft-Mania-Logo.png" alt="Logo" class="img-fluid footerlogo">
+    </div>
   </footer>
+
+  <!-- JavaScript -->
+  <script src="js/jquery-3.5.1.slim.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
