--- a/pages/vinyl.html
+++ b/pages/vinyl.html
@@ -1,130 +1,123 @@
-<!DOCTYPE html>
 <html lang="es">
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Novedades - Craftmania Panamá</title>
-  <link rel="stylesheet" href="primaryStyles.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../estilos.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description"
+    content="CraftMania ofrece personalización única para tus celebraciones. Descubre nuestro catálogo y haz que tu próximo evento sea excepcional.">
+  <meta name="keywords" content="CraftMania, celebraciones personalizadas, eventos, catálogo">
+
+  <title>CraftMania - Sublimación de Prendas Textiles & Otros</title>
 </head>
 
 <body>
-  <!-- Encabezado -->
-  <header>
-    <nav class="navbar">
-      <div class="navbar-Logo">
-        <a href="/index.html"><img src="https://i.ibb.co/8BXzN0R/Craft-Mania-Logo.png" alt="Logo CraftMania"
-            height="32"></a>
-      </div>
-      <div class="navbar-menu">
-        <ul>
-          <a href="Inicio.html">
-            <li>Inicio</li>
-          </a>
-          <a href="Nosotros.html">
-            <li>Nosotros</li>
-          </a>
-          <a href="Catalogo.html">
-            <li>Catalogo</li>
-          </a>
-          <a href="Noticias.html">
-            <li>Novedades</li>
-          </a>
-          <a href="Contacto.html">
-            <li>Contactanos</li>
-          </a>
-        </ul>
-      </div>
-      <div class="navbar-button">Registrarse</div>
-    </nav>
+  <header class="container-fluid d-none d-lg-flex justify-content-center align-items-center" id="promotionTag">
+    <img src="../assets/icons/Delivery.png" alt="">
+    <span class="font-weight-light mb-0">Envío gratuito a partir de $40. Tiempo de entrega en 48 horas</span>
   </header>
-
-  <!-- Contenido de la página "Novedades" -->
-  <main class="novedades-container">
-    <h1>Novedades</h1>
-
-    <section class="news-item">
-      <img src="novedad1.jpg" alt="Novedad 1">
-      <div class="news-content">
-        <h2>Nueva Colección de Sellos</h2>
-        <p>
-          Estamos emocionados de presentar nuestra última colección de sellos de alta calidad. Diseñados especialmente
-          para los amantes del scrapbooking y la papelería, estos sellos añadirán un toque especial a tus proyectos
-          creativos. ¡Ven a verlos en nuestra tienda!
-        </p>
-        <a href="#">Leer más</a>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <a class="navbar-brand d-lg-none" href="../index.html">
+      <img src="../assets/Craft-Mania-Logo.png" alt="Logo de tu empresa" height="50" class="p-2">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <img src="../assets/icons/Inicio.png" alt="Papelería Creativa">
+          <a class="nav-link" href="../index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <img src="../assets/icons/Papel.png" alt="Papelería Creativa">
+          <a class="nav-link" href="../pages/crafting.html">Craft's</a>
+        </li>
+        <li class="nav-item">
+          <img src="../assets/icons/Tinta.png" alt="Aplicación de Tinta">
+          <a class="nav-link" href="../pages/sublimation.html">Sublimación</a>
+        </li>
+        <li class="nav-item">
+          <img src="../assets/icons/Vinil.png" alt="Vinilos de Corte & Textiles">
+          <a class="nav-link" href="../pages/vinyl.html">Vinilos</a>
+        </li>
+        <li class="nav-item">
+          <img src="../assets/icons/Location.png" alt="Ubicación">
+          <a class="nav-link" href="../pages/orderprocess.html">Proceso para Pedidos</a>
+        </li>
+        <li class="nav-item">
+          <img src="../assets/icons/Contacto.png" alt="Información de Contacto">
+          <a class="nav-link" href="../pages/contact.html">Contacto</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <main>
+    <section class="container-fluid d-flex justify-content-center align-items-center">
+      <div class="row p-5 justify-content-around">
+        <div class="col-lg-5 col-md-12">
+          <img src="../assets/sublimationMainImage.png" alt="Sublimación de Prendas Textiles" class="w-75">
+        </div>
+        <div class="col-lg-5 d-none d-lg-flex flex-column align-items-center" id="craftHeader">
+          <h1 class="mb-4">Sublimación de Prendas Textiles & Otros</h1>
+          <p><strong>¿En qué consiste la sublimación?</strong><br><br>
+            La sublimación de prendas puede varias demasiado. Puede ir desde un mousepad, hasta una prenda textil como
+            un sueter casual o deportivo, así tambien como tazas, platos y demás. La tematica como siempre queda a
+            elección de nuestros clientes y tratamos de plasmar toda su idea con la mayor precisión posible.</p>
+        </div>
       </div>
     </section>
-
-    <section class="news-item">
-      <img src="novedad2.jpg" alt="Novedad 2">
-      <div class="news-content">
-        <h2>Evento de Arte en Vivo</h2>
-        <p>
-          ¡Únete a nosotros en nuestro próximo evento de arte en vivo! Tendremos demostraciones y talleres impartidos
-          por talentosos artistas locales. Es una excelente oportunidad para aprender nuevas técnicas y conectar con
-          otros miembros de la comunidad creativa.
-        </p>
-        <a href="#">Leer más</a>
-      </div>
-    </section>
-
-    <!-- Agregar más noticias de novedades si es necesario -->
   </main>
 
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-logo">
-        <h3>Craftmania Panamá</h3>
+  <footer class="container-fluid">
+    <div class="main-footer">
+      <div class="container-fluid d-flex flex-column" id="footerBody">
+        <div class="row px-5 d-flex justify-content-around mt-5">
+          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+            <div class="sectionTitle">Redes Sociales</div>
+            <div class="sectionItem"> <a
+                href="https://instagram.com/craftmania.pty?igshid=MzRlODBiNWFlZA==">Instagram</a> </div>
+            <div class="sectionItem"><a href="https://www.facebook.com/profile.php?id=61551363476187">Facebook</a></div>
+            <div class="sectionItem"><a href="https://www.tiktok.com/@mgcraft.pty?_t=8fmU2t6IpW9&_r=1">TikTok</a></div>
+          </div>
+          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+            <div class="sectionTitle">Políticas</div>
+            <div class="sectionItem">Privacidad</div>
+            <div class="sectionItem">Confidencialidad a Usuario</div>
+            <div class="sectionItem">Recursos</div>
+          </div>
+          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+            <div class="sectionTitle">Colaboradores</div>
+            <div class="sectionItem">Emily Moran</div>
+            <div class="sectionItem">Esteban Samaniego</div>
+          </div>
+          <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
+            <div class="sectionTitle">Centro de Ayuda</div>
+            <div class="sectionItem">Devoluciones & Reclamos</div>
+            <div class="sectionItem">Preguntas Frecuentes</div>
+            <div class="sectionItem">Politicas de Envio</div>
+          </div>
+        </div>
+        <div class="border-top container-fluid my-4" id="footerDivider"></div>
+        <div class="copyrigth"><span>Todas las imágenes, textos, gráficos y otros elementos de este sitio web están
+            protegidos por las leyes de derechos de autor y otras leyes de propiedad intelectual. Queda estrictamente
+            prohibida la reproducción, distribución, o modificación de cualquier parte de este sitio web sin el permiso
+            previo por escrito de CraftMania Panamá.</span></div>
       </div>
-      <div class="footer-links">
-        <div class="footer-section">
-          <h4>Catálogo</h4>
-          <ul>
-            <li><a href="#">Productos</a></li>
-            <li><a href="#">Ofertas</a></li>
-            <li><a href="#">Novedades</a></li>
-            <!-- Añadir más opciones aquí -->
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h4>Servicios</h4>
-          <ul>
-            <li><a href="#">Envíos</a></li>
-            <li><a href="#">Personalización</a></li>
-            <li><a href="#">Asesoramiento</a></li>
-            <!-- Añadir más opciones aquí -->
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h4>Freebies</h4>
-          <ul>
-            <li><a href="#">Descargas gratuitas</a></li>
-            <li><a href="#">Muestras gratuitas</a></li>
-            <li><a href="#">Promociones</a></li>
-            <!-- Añadir más opciones aquí -->
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h4>Nosotros</h4>
-          <ul>
-            <li><a href="#">Misión y visión</a></li>
-            <li><a href="#">Equipo</a></li>
-            <li><a href="#">Testimonios</a></li>
-            <!-- Añadir más opciones aquí -->
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      <p>Todos los derechos reservados &copy; Craftmania Panamá, 2023</p>
-      <div class="footer-legal">
-        <a href="#">Políticas de privacidad</a>
-        <a href="#">Términos y condiciones</a>
-      </div>
+      <img src="../assets/Craft-Mania-Logo.png" alt="Logo" class="img-fluid footerlogo">
     </div>
   </footer>
+
+  <!-- JavaScript -->
+  <script src="js/jquery-3.5.1.slim.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
