Correción de link de hojas de estilo

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,19 +2,18 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../estilos.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description"
-    content="Contacta a CraftMania para obtener información sobre nuestros servicios de personalización de celebraciones. Déjanos tus comentarios y sugerencias.">
-  <meta name="keywords" content="CraftMania, celebraciones personalizadas, eventos, catálogo">
+  <!--Etiquetas Meta-->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--Enlaces a archivos locales-->
+  <link rel="stylesheet" href="main.css">
+  <!--Boostrap CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <title>CraftMania - Personalización de Celebraciones Únicas</title>
 </head>
+
 <body>
   <header class="container-fluid d-none d-lg-flex justify-content-center align-items-center" id="promotionTag">
     <img src="../assets/icons/Delivery.png" alt="">
@@ -47,7 +46,7 @@
           <a class="nav-link" href="../pages/vinyl.html">Vinilos</a>
         </li>
         <li class="nav-item">
-          <img src="../assets/icons/Location.png" alt="Ubicación"> 
+          <img src="../assets/icons/Location.png" alt="Ubicación">
           <a class="nav-link" href="../pages/orderprocess.html">Proceso para Pedidos</a>
         </li>
         <li class="nav-item">
@@ -156,7 +155,8 @@
           </div>
         </div>
         <div class="border-top container-fluid my-4 d-none d-lg-flex" id="footerDivider"></div>
-        <div class="copyrigth d-none d-lg-flex"><span>Todas las imágenes, textos, gráficos y otros elementos de este sitio web están
+        <div class="copyrigth d-none d-lg-flex"><span>Todas las imágenes, textos, gráficos y otros elementos de este
+            sitio web están
             protegidos por las leyes de derechos de autor y otras leyes de propiedad intelectual. Queda estrictamente
             prohibida la reproducción, distribución, o modificación de cualquier parte de este sitio web sin el permiso
             previo por escrito de CraftMania Panamá.</span></div>
