--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -1,17 +1,14 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="../css/bootstrap.min.css">
-  <link rel="stylesheet" href="../estilos.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description"
-    content="CraftMania ofrece personalización única para tus celebraciones. Descubre nuestro catálogo y haz que tu próximo evento sea excepcional.">
-  <meta name="keywords" content="CraftMania, celebraciones personalizadas, eventos, catálogo">
+  <!--Etiquetas Meta-->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--Enlaces a archivos locales-->
+  <link rel="stylesheet" href="main.css">
+  <!--Boostrap CSS-->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
   <title>CraftMania - Sublimación de Prendas Textiles & Otros</title>
 </head>
