--- a/pages/catalogue.html
+++ b/pages/catalogue.html
@@ -1,24 +1,27 @@
-<html lang="es">
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
   <!--Etiquetas Meta-->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="CraftMania - Personalización para Celebraciones Únicas. Encuentra servicios de sublimación, papelería personalizada, vinilos y más para tus eventos especiales.">
+  <meta name="keywords" content="CraftMania, personalización, sublimación, papelería, vinilos, celebraciones">
   <!--Enlaces a archivos locales-->
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="../main.css">
   <!--Boostrap CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-  <title>CraftMania - Papeleria & Empaques Personalizados</title>
-</head>
+    <title>CraftMania - Catálogo de Servicios</title>
+  </head>
 
 <body>
+  <!----------Encabezado, otros & Barra de Navegación---------->
   <header class="container-fluid nav-container">
     <nav class="navbar navbar-expand-lg bg-body-ligth" id="custom-navbar">
       <a class="navbar-brand d-md-block d-lg-none" href="#">
-        <img src="./assets/logo-original.png" alt="Bootstrap" width="150">
+        <img src="../assets/logo-original.png" alt="Bootstrap" width="150">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,37 +29,71 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-auto text-uppercase fw-light">
-          <a class="nav-link active mx-3" aria-current="page" href="./index.html">Inicio</a>
-          <a class="nav-link mx-3" href="./pages/catalogue.html">Catalogo</a>
-          <a class="nav-link mx-3" href="./pages/about-us.html">Sobre Nosotros</a>
-          <a class="nav-link mx-3" href="./pages/order-process.html">Proceso de Compra</a>
-          <a class="nav-link mx-3" href="./pages/contact.html">Contacto</a>
+          <a class="nav-link mx-3" href="../index.html">Inicio</a>
+          <a class="nav-link active mx-3" aria-current="page" href="../pages/catalogue.html">Catalogo</a>
+          <a class="nav-link mx-3" href="../pages/aboutus.html">Sobre Nosotros</a>
+          <a class="nav-link mx-3" href="../pages/orderprocess.html">Proceso de Compra</a>
+          <a class="nav-link mx-3" href="../pages/contact.html">Contacto</a>
         </ul>
       </div>
     </nav>
   </header>
 
+  <!----------Aquí inicia el contenido de la pagina---------->
   <main>
-    <section class="container-fluid d-flex justify-content-center align-items-center">
-      <div class="row p-5 justify-content-around">
-        <div class="col-lg-5 col-md-12">
-          <img src="../assets/craftMainImage.png" alt="">
+    <section class="container-fluid pb-5">
+      <div class="row justify-content-center p-5">
+        <div class="col-12">
+          <div class="section-title text-center mb-4 pb-2">
+            <h1 class="title mb-2">Catálogo de Servicios</h1>
+            <p class="text-muted para-desc mx-auto mb-0">Nuestra prioridad es garantizar la sensación de personalización. Explora nuestra gama de servicios de alta calidad diseñados para satisfacer tus necesidades.</p>
+          </div>
         </div>
-        <div class="col-lg-5 d-none d-lg-flex flex-column align-items-center" id="craftHeader">
-          <h1 class="mb-4">Crafting & Papelería Personalizada</h1>
-          <p><strong>¿En qué consiste el servicio de Crafting?</strong><br><br>
-            Desde invitaciones, carteles, empaques de comestibles y mucho más. Lo que puedas imaginar lo personalizamos
-            a gusto de nuestros clientes. ¿Y la temática importa? No, no importa. Sea un personaje de ficción, de
-            peliculas, de una simple serie o incluso de una marca o un logo en especifico ¡Lo personalizamos!</p>
+        <!-- Tarjeta 1 -->
+        <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+          <div class="card">
+            <img src="../assets/sublimationMainImage.png" class="card-img-top img-fluid" alt="Título del Servicio 1">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Sublimación</h5>
+              <p class="card-text">Sublima tus prendas textiles, acrilicos o tazas con materiales DTF o tintas de sublimación</p>
+              <!-- Agrega aquí cualquier otro contenido relevante, como un botón para obtener más información o un precio. -->
+            </div>
+          </div>
+        </div>
+        <!-- Tarjeta 2 -->
+        <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+          <div class="card">
+            <img src="../assets/crafting-papeleria.png" class="card-img-top" alt="Título del Servicio 2">
+            <div class="card-body">
+              <h5 class="card-title fw-bold">Papeleria Personalizada</h5>
+              <p class="card-text">Personalizamos empaques, etiquetas y más para tus eventos. ¡Imagina un empaque con tu rostro!</p>
+              <!-- Agrega aquí cualquier otro contenido relevante, como un botón para obtener más información o un precio. -->
+            </div>
+          </div>
+        </div>
+        <!-- Tarjeta 3 -->
+        <div class="col-lg-4 col-md-6 col-sm-12 mb-4">
+          <div class="card">
+            <img src="../assets/vinilos.png" class="card-img-top" alt="Título del Servicio 3">
+            <div class="card-body">
+              <h5 class="card-title">Vinilos</h5>
+              <p class="card-text">¿Letras o Sticker? Usamos vinilos de la marca easyweed para enmarcar tus prendas.</p>
+              <!-- Agrega aquí cualquier otro contenido relevante, como un botón para obtener más información o un precio. -->
+            </div>
+          </div>
         </div>
       </div>
     </section>
+    
+
+
   </main>
+
 
   <footer class="container-fluid d-flex flex-column" id="footer-body">
     <div class="row mb-0 p-5 d-flex flex-row align-items-center" id="footer-content">
       <div class="col-lg-3 col-md-8" id="copyrigth">
-        <div class="footer-left-section"> <img src="./assets/logo-positivo.png" alt="Craftmania Logo Versión Positiva"
+        <div class="footer-left-section"> <img src="../assets/logo-positivo.png" alt="Craftmania Logo Versión Positiva"
             class="img-fluid mb-3" id="footer-logo">
           <p class="text-light fw-light">Todas las imágenes, textos, gráficos y otros elementos de este
             sitio web están protegidos por las <strong>leyes de derechos de autor y otras leyes de propiedad
@@ -92,7 +129,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
-
 </body>
 
 </html>
