Cambios menores, enrutado de navbar

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,7 +29,7 @@
           <a class="nav-link mx-3" href="../index.html">Inicio</a>
           <a class="nav-link mx-3" href="../pages/catalogue.html">Catalogo</a>
           <a class="nav-link mx-3" href="../pages/about-us.html">Sobre Nosotros</a>
-          <a class="nav-link mx-3" href="../pages/order-process.html">Proceso de Compra</a>
+          <a class="nav-link mx-3" href="../pages/orderprocess.html">Entregas & Pedidos</a>
           <a class="nav-link active mx-3" aria-current="page" href="../pages/contact.html">Contacto</a>
         </ul>
       </div>
@@ -70,7 +70,7 @@
               <div class="col-12">
                 <div class="inputField">
                   <label for="descripMensaje" class="input-label">Descripción del Mensaje</label>
-                  <textarea rows="4" class="form-control" placeholder="Tu momento ha llegado. ¿Qué quieres decirnos"></textarea>
+                  <textarea rows="4" class="form-control" placeholder="Tu momento ha llegado. ¿Qué quieres decirnos?"></textarea>
                 </div>
               </div>
               <div class="col-12 text-center">
