--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -32,7 +32,7 @@
           <a class="nav-link mx-3" href="../index.html">Inicio</a>
           <a class="nav-link mx-3" href="../pages/catalogue.html">Catalogo</a>
           <a class="nav-link active mx-3" aria-current="page" href="../pages/about-us.html">Sobre Nosotros</a>
-          <a class="nav-link mx-3" href="../pages/orderprocess.html">Proceso de Compra</a>
+          <a class="nav-link mx-3" href="../pages/orderprocess.html">Entregas & Pedidos</a>
           <a class="nav-link mx-3" href="../pages/contact.html">Contacto</a>
         </ul>
       </div>
