--- a/pages/orderprocess.html
+++ b/pages/orderprocess.html
@@ -14,7 +14,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-    <title>CraftMania - Proceso de Entrega</title>
+    <title>CraftMania - Entregas & Pedidos</title>
 </head>
 
 <body>
@@ -34,7 +34,7 @@
                     <a class="nav-link active mx-3" aria-current="page" href="../index.html">Inicio</a>
                     <a class="nav-link mx-3" href="../pages/catalogue.html">Catalogo</a>
                     <a class="nav-link mx-3" href="../pages/aboutus.html">Sobre Nosotros</a>
-                    <a class="nav-link mx-3" href="../pages/orderprocess.html">Proceso de Compra</a>
+                    <a class="nav-link mx-3" href="../pages/orderprocess.html">Entregas & Pedidos</a>
                     <a class="nav-link mx-3" href="../pages/contact.html">Contacto</a>
                 </ul>
             </div>
@@ -50,8 +50,8 @@
                         <h1 class="mb-0">Proceso entrega de productos</h1>
                         <span><em>Lee esto, esta información es de suma importancia.</em></span>
                     </div>
-                    <div class="col-12 mb-3">
-                        <div class="proccess-line d-flex flex-row align-items-center">
+                    <div class="col-10 mb-3">
+                        <div class="proccess-line d-flex flex-column align-items-center">
                             <div class="step-icon"><i class="bi bi-calendar-heart"></i></i></i></div>
                             <div class="step-content ms-4">
                                 <p>Siempre estamos deseando recibir a nuevos clientes, nuevas ideas y nuevos
@@ -65,8 +65,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 mb-3">
-                        <div class="proccess-line d-flex flex-row align-items-center">
+                    <div class="col-10 mb-3">
+                        <div class="proccess-line d-flex flex-column align-items-center">
                             <div class="step-icon"><i class="bi bi-coin"></i></div>
                             <div class="step-content ms-4">
                                 <p>Antes de poner en marcha la maquinaria y como prueba de compromiso del a
@@ -80,8 +80,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 mb-3">
-                        <div class="proccess-line d-flex flex-row align-items-center">
+                    <div class="col-10 mb-3">
+                        <div class="proccess-line d-flex flex-column align-items-center">
                             <div class="step-icon"><i class="bi bi-bag-check"></i></div>
                             <div class="step-content ms-4">
                                 <p>No te preocupes, contamos con pago por transferencias, distintas
@@ -95,8 +95,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-12 mb-3">
-                        <div class="proccess-line d-flex flex-row align-items-center">
+                    <div class="col-10 mb-3">
+                        <div class="proccess-line d-flex flex-column align-items-center">
                             <div class="step-icon"><i class="bi bi-balloon-heart"></i></div>
                             <div class="step-content ms-4">
                                 <p>Ya hemos aprobado tu pago, se ha verificado. Y de esta forma, las cosas
